--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>457</width>
-    <height>407</height>
+    <height>548</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,8 +40,8 @@
    <widget class="QTextEdit" name="textEdit_saida">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>290</y>
+      <x>90</x>
+      <y>430</y>
       <width>341</width>
       <height>70</height>
      </rect>
@@ -50,8 +50,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>310</y>
+      <x>20</x>
+      <y>450</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -63,10 +63,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>40</x>
       <y>60</y>
-      <width>381</width>
-      <height>211</height>
+      <width>391</width>
+      <height>244</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -213,6 +213,56 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_recursivoPiaprox">
+         <property name="text">
+          <string>Recursivo</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;soma n cubos&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_iterativoNcubos">
+         <property name="text">
+          <string>Iterativo</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_recursivoNcubos">
+         <property name="text">
+          <string>Recursivo</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;numeros naturais&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_iterativoNmnaturais">
+         <property name="text">
+          <string>Iterativo</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_recursivoNmnaturais">
          <property name="text">
           <string>Recursivo</string>
          </property>
